unpackaged/objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>NumberClassError__c</fullName>
        <label>Number Class Error</label>
        <summaryFilterItems>
            <field>ApexClass__c.NumberError__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ApexClass__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberClass__c</fullName>
        <label>Number Class</label>
        <summaryForeignKey>ApexClass__c.Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberLinesCovegare__c</fullName>
        <label>Number Lines Covegare</label>
        <summarizedField>ApexClass__c.LinesCovegare__c</summarizedField>
        <summaryForeignKey>ApexClass__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberLines__c</fullName>
        <label>Number Lines</label>
        <summarizedField>ApexClass__c.Lines__c</summarizedField>
        <summaryForeignKey>ApexClass__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Package</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>